--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -102,6 +102,12 @@
                 android:title="@string/model_number"
                 android:summary="@string/device_info_default"/>
                 
+        <!-- Evervolv Rom version -->
+        <Preference android:key="rom_version" 
+                style="?android:preferenceInformationStyle"
+                android:title="@string/rom_version"
+                android:summary="@string/device_info_default"/>
+
         <!-- Device firmware version -->
         <Preference android:key="firmware_version" 
                 style="?android:preferenceInformationStyle"
