--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -285,6 +285,23 @@
         <item>2</item>
     </string-array>
 
+    <!-- Match with constants in BatteryHistory class -->
+    <string-array name="battery_history_type_spinner">
+        <item>CPU usage</item>
+        <item>Network usage</item>
+        <item>GPS usage</item>
+        <item>Sensor usage</item>
+        <item>Partial wake usage</item>
+        <item>Other usage</item>
+    </string-array>
+
+    <!-- Match with constants in BatteryStats class -->
+    <string-array name="battery_history_which_spinner">
+        <item>Since last unplugged</item>
+        <item>Total since boot</item>
+        <item>Total in all time</item>
+    </string-array>
+
     <!-- Display options for UsageStats class -->
     <string-array name="usage_stats_display_order_types">
         <item>Usage Time</item>
@@ -320,6 +337,20 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+    </string-array>
+
+    <!-- openvpn advanced menu protocol entries -->
+    <!-- Do not translate. -->
+    <string-array name="vpn_openvpn_protocol_entries">
+        <item>udp</item>
+        <item>tcp</item>
+    </string-array>
+
+    <!-- openvpn advanced menu device entries -->
+    <!-- Do not translate. -->
+    <string-array name="vpn_openvpn_device_entries">
+        <item>tun</item>
+        <item>tap</item>
     </string-array>
 
     <!-- Locales in this list are displayed with the corresponding
