Temporarily make this change so the widget looks half-way decent.
Change-Id: Ib13831e5449c52ee4184528e75a40736171196fa

--- a/res/layout/wimax_widget.xml
+++ b/res/layout/wimax_widget.xml
@@ -43,7 +43,7 @@
 				   android:scaleType="center" />
 
         		<ImageView android:id="@+id/wimax_trigger"
-				   android:background="@drawable/wimax_switch_off"
+				   android:src="@drawable/wimax_switch_off"
 				   android:layout_width="24.0px"
 				   android:layout_height="74.0px"
 				   android:layout_marginLeft="78.0px"
