Update 4G Widget layout.
Change-Id: Ia202b88867273fc6b8e4c1e4c6b63f9542f2146d

--- a/res/drawable/panel_selector.xml
+++ b/res/drawable/panel_selector.xml
@@ -2,6 +2,6 @@
 <selector
   xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true" android:drawable="@android:color/transparent" />
-    <item android:state_pressed="true" android:drawable="@drawable/wimax_btn_press" />
+    <item android:state_pressed="true" android:drawable="@drawable/wimax_panel" />
     <item android:drawable="@android:color/transparent" />
 </selector>
