--- a/res/drawable/panel_selector.xml
+++ b/res/drawable/panel_selector.xml
@@ -2,6 +2,6 @@
 <selector
   xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true" android:drawable="@android:color/transparent" />
-    <item android:state_pressed="true" android:drawable="@drawable/wimax_panel" />
+    <item android:state_pressed="true" android:drawable="@drawable/power_panel_pressed" />
     <item android:drawable="@android:color/transparent" />
 </selector>
