--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -27,7 +27,7 @@
             <intent
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="com.evervolv.EVParts"
-                android:targetClass="com.evervolv.EVParts.SpareParts" />
+                android:targetClass="com.evervolv.EVParts.EvervolvSettings" />
         </com.android.settings.IconPreferenceScreen>
 
         <com.android.settings.IconPreferenceScreen
