--- a/res/values-uk/arrays.xml
+++ b/res/values-uk/arrays.xml
@@ -43,9 +43,10 @@
     <item msgid="3342301044271143016">"15 секунд"</item>
     <item msgid="8881760709354815449">"30 секунд"</item>
     <item msgid="7589406073232279088">"1 хвилина"</item>
-    <item msgid="7001195990902244174">"2 хв."</item>
-    <item msgid="5721688686241190620">"10 хв."</item>
-    <item msgid="7156442995039264948">"30 хв."</item>
+    <item>2 хвилини</item>
+    <item>5 хвилин</item>
+    <item>10 хвилин</item>
+    <item>30 хвилин</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Дуже пов."</item>
@@ -115,6 +116,19 @@
     <item msgid="1549288661423279207">"Ніколи в підключ. стані"</item>
     <item msgid="1986753720941888596">"Ніколи"</item>
   </string-array>
+  <string-array name="battery_history_type_spinner">
+    <item>Використання ЦП</item>
+    <item>Використання мережі</item>
+    <item>Використання GPS</item>
+    <item>Використання датчика</item>
+    <item>Використання Partial wake</item>
+    <item>Інше</item>
+  </string-array>
+  <string-array name="battery_history_which_spinner">
+    <item>З останього вимкн. зовн. живл.</item>
+    <item>Всього, з моменту завантаження</item>
+    <item>Всього, за весь час</item>
+  </string-array>
   <string-array name="usage_stats_display_order_types">
     <item msgid="9077371706468756228">"Час використ."</item>
     <item msgid="1908750532762193304">"К-сть запусків"</item>
@@ -143,6 +157,9 @@
     <item msgid="535934025797984365">"CHAP"</item>
     <item msgid="8383098660619805783">"PAP або CHAP"</item>
   </string-array>
+    <!-- no translation found for apn_protocol_entries:0 (4852355456199302715) -->
+    <!-- no translation found for apn_protocol_entries:1 (4394161344888484571) -->
+    <!-- no translation found for apn_protocol_entries:2 (8084938354605535381) -->
   <string-array name="app_install_location_entries">
     <item msgid="8151497958991952759">"Внутрішня пам\'ять пристрою"</item>
     <item msgid="3738430123799803530">"Знімна карта SD"</item>
@@ -153,5 +170,14 @@
     <item msgid="6293147072807231256">"Ніколи"</item>
     <item msgid="1276641209451816572">"Лише в беззвуч. режимі"</item>
     <item msgid="8418930333779132418">"Лише не в беззвучному режимі"</item>
+  </string-array>
+  <string-array name="profile_entries">
+    <item>Увімк.</item>
+    <item>Вимк.</item>
+    <item>Не заміщати</item>
+  </string-array>
+  <string-array name="backgroundWidget">
+    <item>Сірий</item>
+    <item>Прозорий</item>
   </string-array>
 </resources>
