--- a/res/values-pt/arrays.xml
+++ b/res/values-pt/arrays.xml
@@ -143,6 +143,9 @@
     <item msgid="535934025797984365">"CHAP"</item>
     <item msgid="8383098660619805783">"PAP ou CHAP"</item>
   </string-array>
+    <!-- no translation found for apn_protocol_entries:0 (4852355456199302715) -->
+    <!-- no translation found for apn_protocol_entries:1 (4394161344888484571) -->
+    <!-- no translation found for apn_protocol_entries:2 (8084938354605535381) -->
   <string-array name="app_install_location_entries">
     <item msgid="8151497958991952759">"Armazenamento do dispositivo interno"</item>
     <item msgid="3738430123799803530">"Cartão SD removível"</item>
@@ -153,5 +156,14 @@
     <item msgid="6293147072807231256">"Nunca"</item>
     <item msgid="1276641209451816572">"Somente no modo silencioso"</item>
     <item msgid="8418930333779132418">"Somente fora do modo silencioso"</item>
+  </string-array>
+  <string-array name="profile_entries">
+    <item>Ligado</item>
+    <item>Desligado</item>
+    <item>Sem substituir</item>
+  </string-array>
+  <string-array name="backgroundWidget">
+    <item>Cinza</item>
+    <item>Transparente</item>
   </string-array>
 </resources>
