--- a/res/values-sv/arrays.xml
+++ b/res/values-sv/arrays.xml
@@ -115,10 +115,23 @@
     <item msgid="1549288661423279207">"Aldrig när den är inkopplad"</item>
     <item msgid="1986753720941888596">"Aldrig"</item>
   </string-array>
+  <string-array name="battery_history_type_spinner">
+    <item>CPU-användning</item>
+    <item>Nätverksanvändning</item>
+    <item>GPS-användning</item>
+    <item>Sensor-användning</item>
+    <item>Delvis väckning-användning</item>
+    <item>Övrig användning</item>
+  </string-array>
+  <string-array name="battery_history_which_spinner">
+    <item>Sen senast frånkopplad</item>
+    <item>Totalt sen start</item>
+    <item>Totalt</item>
+  </string-array>
   <string-array name="usage_stats_display_order_types">
     <item msgid="9077371706468756228">"Användningstid"</item>
     <item msgid="1908750532762193304">"Starta räkneverk"</item>
-    <item msgid="1213951670006606353">"Namn på program"</item>
+    <item msgid="1213951670006606353">"Namn på app"</item>
   </string-array>
   <string-array name="wifi_eap_entries">
     <item msgid="8615575908717909498">"PEAP"</item>
@@ -143,6 +156,9 @@
     <item msgid="535934025797984365">"CHAP"</item>
     <item msgid="8383098660619805783">"PAP eller CHAP"</item>
   </string-array>
+    <!-- no translation found for apn_protocol_entries:0 (4852355456199302715) -->
+    <!-- no translation found for apn_protocol_entries:1 (4394161344888484571) -->
+    <!-- no translation found for apn_protocol_entries:2 (8084938354605535381) -->
   <string-array name="app_install_location_entries">
     <item msgid="8151497958991952759">"Lagring på intern enhet"</item>
     <item msgid="3738430123799803530">"Flyttbart SD-kort"</item>
@@ -153,5 +169,14 @@
     <item msgid="6293147072807231256">"Aldrig"</item>
     <item msgid="1276641209451816572">"Bara i tyst läge"</item>
     <item msgid="8418930333779132418">"Bara i tyst läge"</item>
+  </string-array>
+  <string-array name="profile_entries">
+    <item>På</item>
+    <item>Av</item>
+    <item>Ingen åsidosättning</item>
+  </string-array>
+  <string-array name="backgroundWidget">
+    <item>Grå</item>
+    <item>Transparent</item>
   </string-array>
 </resources>
