--- a/res/values-zh-rCN/arrays.xml
+++ b/res/values-zh-rCN/arrays.xml
@@ -44,6 +44,7 @@
     <item msgid="8881760709354815449">"30 秒"</item>
     <item msgid="7589406073232279088">"1 分钟"</item>
     <item msgid="7001195990902244174">"2 分钟"</item>
+    <item>5 分钟</item>
     <item msgid="5721688686241190620">"10 分钟"</item>
     <item msgid="7156442995039264948">"30 分钟"</item>
   </string-array>
@@ -115,6 +116,19 @@
     <item msgid="1549288661423279207">"充电时永不休眠"</item>
     <item msgid="1986753720941888596">"永不休眠"</item>
   </string-array>
+  <string-array name="battery_history_type_spinner">
+    <item>CPU 使用</item>
+    <item>网络使用</item>
+    <item>GPS 使用</item>
+    <item>传感器使用</item>
+    <item>部分唤醒使用</item>
+    <item>其它使用</item>
+  </string-array>
+  <string-array name="battery_history_which_spinner">
+    <item>自从上次拔下电源</item>
+    <item>从启动总计</item>
+    <item>所有时间总计</item>
+  </string-array>
   <string-array name="usage_stats_display_order_types">
     <item msgid="9077371706468756228">"使用时间"</item>
     <item msgid="1908750532762193304">"启动次数"</item>
@@ -143,6 +157,9 @@
     <item msgid="535934025797984365">"CHAP"</item>
     <item msgid="8383098660619805783">"PAP 或 CHAP"</item>
   </string-array>
+    <!-- no translation found for apn_protocol_entries:0 (4852355456199302715) -->
+    <!-- no translation found for apn_protocol_entries:1 (4394161344888484571) -->
+    <!-- no translation found for apn_protocol_entries:2 (8084938354605535381) -->
   <string-array name="app_install_location_entries">
     <item msgid="8151497958991952759">"设备内部存储"</item>
     <item msgid="3738430123799803530">"可卸载的 SD 卡"</item>
@@ -151,7 +168,16 @@
   <string-array name="vibrate_entries">
     <item msgid="3388952299521009213">"始终"</item>
     <item msgid="6293147072807231256">"一律不"</item>
-    <item msgid="1276641209451816572">"仅在静音模式下来电振动"</item>
-    <item msgid="8418930333779132418">"仅在非静音模式下来电振动"</item>
+    <item msgid="1276641209451816572">"仅在静音模式"</item>
+    <item msgid="8418930333779132418">"仅在非静音模式"</item>
+  </string-array>
+  <string-array name="profile_entries">
+    <item>开启</item>
+    <item>关闭</item>
+    <item>保持原有设置</item>
+  </string-array>
+  <string-array name="backgroundWidget">
+    <item>灰色</item>
+    <item>透明</item>
   </string-array>
 </resources>
