--- a/res/values-zh-rTW/arrays.xml
+++ b/res/values-zh-rTW/arrays.xml
@@ -44,6 +44,7 @@
     <item msgid="8881760709354815449">"30 秒"</item>
     <item msgid="7589406073232279088">"1 分鐘"</item>
     <item msgid="7001195990902244174">"2 分鐘"</item>
+    <item>5 分鐘</item>
     <item msgid="5721688686241190620">"10 分鐘"</item>
     <item msgid="7156442995039264948">"30 分鐘"</item>
   </string-array>
@@ -115,6 +116,24 @@
     <item msgid="1549288661423279207">"插入時絕不"</item>
     <item msgid="1986753720941888596">"永不"</item>
   </string-array>
+
+    <!-- Match with constants in BatteryHistory class -->
+    <string-array name="battery_history_type_spinner">
+        <item>CPU 使用狀況</item>
+        <item>網路使用狀況</item>
+        <item>GPS 使用狀況</item>
+        <item>感應器使用狀況</item>
+        <item>部分喚醒使用狀況</item>
+        <item>其他使用狀況</item>
+    </string-array>
+
+    <!-- Match with constants in BatteryStats class -->
+    <string-array name="battery_history_which_spinner">
+        <item>自上一次拔除電源</item>
+        <item>自上一次重新啟動</item>
+        <item>電池整體使用狀況</item>
+    </string-array>
+
   <string-array name="usage_stats_display_order_types">
     <item msgid="9077371706468756228">"使用時間"</item>
     <item msgid="1908750532762193304">"啟動計數"</item>
@@ -143,6 +162,9 @@
     <item msgid="535934025797984365">"CHAP"</item>
     <item msgid="8383098660619805783">"PAP 或 CHAP"</item>
   </string-array>
+    <!-- no translation found for apn_protocol_entries:0 (4852355456199302715) -->
+    <!-- no translation found for apn_protocol_entries:1 (4394161344888484571) -->
+    <!-- no translation found for apn_protocol_entries:2 (8084938354605535381) -->
   <string-array name="app_install_location_entries">
     <item msgid="8151497958991952759">"內部裝置儲存空間"</item>
     <item msgid="3738430123799803530">"卸除式 SD 卡"</item>
@@ -154,4 +176,17 @@
     <item msgid="1276641209451816572">"僅適用於靜音模式"</item>
     <item msgid="8418930333779132418">"僅適用於非靜音模式"</item>
   </string-array>
+
+<!-- Profile mode options. -->
+    <string-array name="profile_entries">
+        <item>啟用</item>
+        <item>停用</item>
+        <item>保持原有設定</item>
+    </string-array>
+
+    <string-array name="backgroundWidget">
+        <item>灰色</item>
+        <item>透明</item>
+    </string-array>
+
 </resources>
