--- a/res/xml/wireless_settings.xml
+++ b/res/xml/wireless_settings.xml
@@ -40,6 +40,12 @@
             android:targetClass="com.android.settings.wifi.WifiSettings" />
     </PreferenceScreen>
 
+    <CheckBoxPreference
+        android:key="toggle_wimax"
+        android:title="@string/wimax"
+        android:summary="@string/wimax_quick_toggle_summary"
+        android:persistent="false" />
+
     <PreferenceScreen
         android:key="wimax_settings"
         android:title="@string/wimax_settings"
