Settings: add am_pm statusbar clock choice
Change-Id: I1496abb674822298ee6d3df996bad757134f1dd1

Settings: add preference controller for am/pm preference

Change-Id: I134f154a7a3aed8dcd2ee8dc47237df030e64778

--- a/res/values/ev_strings.xml
+++ b/res/values/ev_strings.xml
@@ -35,4 +35,11 @@
     <string name="swipe_to_screenshot_gesture_title">Swipe to screenshot</string>
     <string name="swipe_to_screenshot_gesture_summary">Swipe three fingers to take screenshot</string>
 
+    <!-- Statusbar clock settings -->
+    <string name="status_bar_am_pm_title">AM/PM style</string>
+    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
+    <string name="status_bar_am_pm_normal">Normal</string>
+    <string name="status_bar_am_pm_small">Small</string>
+    <string name="status_bar_am_pm_hidden">Hidden</string>
+
 </resources>
