--- a/res/xml/language_and_input.xml
+++ b/res/xml/language_and_input.xml
@@ -18,6 +18,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res-auto"
+    xmlns:evervolv="http://schemas.android.com/apk/res/evervolv.platform"
     android:key="language_and_input_settings_screen"
     android:title="@string/language_settings"
     settings:initialExpandedChildrenCount="3">
@@ -83,6 +84,13 @@
             android:title="@string/tts_settings_title"
             android:fragment="com.android.settings.tts.TextToSpeechSettings"
             settings:searchable="false"/>
+
+        <evervolv.preference.EVSecureSettingSwitchPreference
+            android:key="feature_touch_hovering"
+            android:title="@string/touchscreen_hovering_title"
+            android:summary="@string/touchscreen_hovering_summary"
+            android:defaultValue="false"
+            evervolv:requiresFeature="hardware:FEATURE_TOUCH_HOVERING" />
 
     </PreferenceCategory>
 
