--- a/res/values/ev_strings.xml
+++ b/res/values/ev_strings.xml
@@ -82,4 +82,7 @@
     <!-- Lock screen visualizer -->
     <string name="lockscreen_visualizer_title">Display music visualizer</string>
 
+    <!-- Lock screen cover art -->
+    <string name="lockscreen_media_art_title">Display media cover art</string>
+
 </resources>
