Settings: Add lockscreen visualizer toggle
Change-Id: I71fb6af56de747a35ab66bfafa0a1634424bfa5c

--- a/res/values/ev_strings.xml
+++ b/res/values/ev_strings.xml
@@ -79,4 +79,7 @@
     <string name="adb_enable_root">Rooted debugging</string>
     <string name="adb_enable_summary_root">Allow running Android debugging as root</string>
 
+    <!-- Lock screen visualizer -->
+    <string name="lockscreen_visualizer_title">Display music visualizer</string>
+
 </resources>
