--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -16,6 +16,7 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:evervolv="http://schemas.android.com/apk/res/evervolv.platform"
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:key="power_usage_summary_screen"
     android:title="@string/power_usage_summary_title"
@@ -39,6 +40,10 @@
         android:title="@string/battery_saver"
         settings:controller="com.android.settings.fuelgauge.BatterySaverController"
         settings:platform_slice="true" />
+
+    <com.evervolv.internal.parts.PartsPreference
+        android:key="perf_profile_settings"
+        evervolv:replacesKey="battery_saver_summary" />
 
     <Preference
         android:fragment="com.android.settings.fuelgauge.SmartBatterySettings"
