--- a/res/xml/configure_notification_settings.xml
+++ b/res/xml/configure_notification_settings.xml
@@ -15,6 +15,7 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:evervolv="http://schemas.android.com/apk/res/evervolv.platform"
                   xmlns:settings="http://schemas.android.com/apk/res-auto"
                   android:title="@string/configure_notification_settings"
                   android:key="configure_notification_settings">
@@ -108,6 +109,12 @@
             android:key="notification_pulse"
             android:title="@string/notification_pulse_title"
             settings:controller="com.android.settings.notification.PulseNotificationPreferenceController"/>
+
+        <!-- Notification lights -->
+        <com.evervolv.internal.parts.PartsPreference
+            android:key="notification_lights"
+            evervolv:requiresConfig="@*android:bool/config_intrusiveNotificationLed"
+            evervolv:replacesKey="notification_pulse" />
 
         <!-- Default notification ringtone -->
         <com.android.settings.DefaultRingtonePreference
