Settings: Add switch for linked ring and media notification volumes
Change-Id: I900af398f566a5415c44fe883cc214985f4e9cd4

Settings: Use correct icon for ring volume

Change-Id: If145262562c1409cd8a6cb79ba46b6646c75d1a8
Signed-off-by: PMS22 <prathams99@rediff.com>

Settings: Fix icon size for ring volume

Change-Id: Idc62abbaea8d4d4ccb72f4a9f395ce0f861dc705

VolumePanel: fix showing notification volume slider when unlinked

* volume_link_notification lives in Settings.Secure not LineageSettings.Secure
* Set max panel slices to 6. We could have up to 5 volumes to control and
  MEDIA_OUTPUT_INDICATOR_SLICE_URI counts as one slice as well.

Change-Id: I0a4c7db1c92e778fba669931259cd52164b1df65

--- a/res/values/ev_strings.xml
+++ b/res/values/ev_strings.xml
@@ -107,4 +107,7 @@
     <!-- Translucent lockscreen notifications background -->
     <string name="translucent_lockscreen_notifications_bg_title">Translucent notifications background</string>
 
+    <!-- Volume link notification -->
+    <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
+
 </resources>
