Settings: Add platform and RAM to Model & Hardware
This seems kinda empty... Fill it with fun stuff

Change-Id: Ia43cb31b7567bed07f2b8a1d8637de4e66320c90
[ mydongistiny: Move to new HardwareInfo ]
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/values/ev_strings.xml
+++ b/res/values/ev_strings.xml
@@ -85,4 +85,10 @@
     <!-- Lock screen cover art -->
     <string name="lockscreen_media_art_title">Display media cover art</string>
 
+    <!-- Hardware info -->
+    <!-- Label for device's hardware platform value [CHAR LIMIT=40] -->
+    <string name="platform_revision">Platform</string>
+    <!-- Label for device's hardware ram size [CHAR LIMIT=40] -->
+    <string name="total_ram">Total RAM</string>
+
 </resources>
