--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -431,4 +431,11 @@
         <item>com.android.systemui</item>
         <item>com.android.vending</item>
     </string-array>
+
+    <!-- Does the device allow for manual subscription provisioning? Only works for multi-sim devices,
+         and currently depends on QC's proprietary telephony stack -->
+    <bool name="config_enableManualSubProvisioning">true</bool>
+
+    <!-- Whether notify user that switch data service -->
+    <bool name="confirm_to_switch_data_service">false</bool>
 </resources>
