--- a/res/values/ev_strings.xml
+++ b/res/values/ev_strings.xml
@@ -91,4 +91,7 @@
     <!-- Label for device's hardware ram size [CHAR LIMIT=40] -->
     <string name="total_ram">Total RAM</string>
 
+    <!-- Jump to lockscreen tuner to let user change lockscreen shortcuts -->
+    <string name="open_lockscreen_tuner">Change shortcuts</string>
+
 </resources>
