--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -111,6 +111,12 @@
 
     </PreferenceCategory>
 
+    <PreferenceScreen
+        android:key="lockscreen_tuner"
+        android:title="@string/open_lockscreen_tuner">
+        <intent android:action="com.android.settings.action.LOCK_SCREEN_TUNER" />
+    </PreferenceScreen>
+
     <!-- Work profile settings are at the bottom with high order value to avoid users thinking that
          any of the above settings (including dynamic) are specific to the work profile. -->
     <PreferenceCategory
